@@ -84,6 +84,8 @@ Release 0.9.0 - unreleased
 
   BUG FIXES
 
+    TAJO-904: ORDER BY Null first support. (Hyoungjun Kim via hyunsik)
+
     TAJO-936: TestStorages::testSplitable is failed occasionally. (jinho)
 
     TAJO-673: Assign proper number of tasks when inserting into partitioned table. (jaehwa)
